@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,6 @@
 package jdk.javadoc.internal.doclets.formats.html;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -50,10 +49,7 @@ import jdk.javadoc.internal.doclets.formats.html.markup.HtmlStyle;
 import jdk.javadoc.internal.doclets.formats.html.markup.TagName;
 import jdk.javadoc.internal.doclets.formats.html.markup.HtmlTree;
 import jdk.javadoc.internal.doclets.formats.html.Navigation.PageMode;
-import jdk.javadoc.internal.doclets.formats.html.markup.RawHtml;
-import jdk.javadoc.internal.doclets.formats.html.markup.StringContent;
-import jdk.javadoc.internal.doclets.formats.html.markup.Table;
-import jdk.javadoc.internal.doclets.formats.html.markup.TableHeader;
+import jdk.javadoc.internal.doclets.formats.html.markup.Text;
 import jdk.javadoc.internal.doclets.toolkit.Content;
 import jdk.javadoc.internal.doclets.toolkit.ModuleSummaryWriter;
 import jdk.javadoc.internal.doclets.toolkit.util.CommentHelper;
@@ -63,11 +59,6 @@ import jdk.javadoc.internal.doclets.toolkit.util.DocFileIOException;
  * Class to generate file for each module contents in the right-hand frame. This will list all the
  * required modules, packages and service types for the module. A click on any of the links will update
  * the frame with the clicked element page.
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
  */
 public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryWriter {
 
@@ -175,66 +166,50 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         computeModulesData();
     }
 
-    /**
-     * Get the module header.
-     *
-     * @param heading the heading for the section
-     */
     @Override
     public Content getModuleHeader(String heading) {
-        HtmlTree bodyTree = getBody(getWindowTitle(mdle.getQualifiedName().toString()));
-        HtmlTree div = new HtmlTree(TagName.DIV);
-        div.setStyle(HtmlStyle.header);
-        Content annotationContent = new HtmlTree(TagName.P);
-        addAnnotationInfo(mdle, annotationContent);
-        div.add(annotationContent);
-        Content label = mdle.isOpen() && (configuration.docEnv.getModuleMode() == ModuleMode.ALL)
-                ? contents.openModuleLabel : contents.moduleLabel;
-        Content tHeading = HtmlTree.HEADING_TITLE(Headings.PAGE_TITLE_HEADING,
-                HtmlStyle.title, label);
-        tHeading.add(Entity.NO_BREAK_SPACE);
-        Content moduleHead = new RawHtml(heading);
-        tHeading.add(moduleHead);
+        HtmlTree body = getBody(getWindowTitle(mdle.getQualifiedName().toString()));
+        var div = HtmlTree.DIV(HtmlStyle.header);
+        Content moduleHead = new ContentBuilder();
+        moduleHead.add(mdle.isOpen() && (configuration.docEnv.getModuleMode() == ModuleMode.ALL)
+                ? contents.openModuleLabel : contents.moduleLabel);
+        moduleHead.add(" ").add(heading);
+        var tHeading = HtmlTree.HEADING_TITLE(Headings.PAGE_TITLE_HEADING,
+                HtmlStyle.title, moduleHead);
         div.add(tHeading);
         bodyContents.setHeader(getHeader(PageMode.MODULE, mdle))
                 .addMainContent(div);
-        return bodyTree;
+        return body;
     }
 
     @Override
     protected Navigation getNavBar(PageMode pageMode, Element element) {
         return super.getNavBar(pageMode, element)
-                .setDisplaySummaryModuleDescLink(!utils.getFullBody(mdle).isEmpty() && !options.noComment())
-                .setDisplaySummaryModulesLink(display(requires) || display(indirectModules))
-                .setDisplaySummaryPackagesLink(display(packages) || display(indirectPackages)
-                        || display(indirectOpenPackages))
-                .setDisplaySummaryServicesLink(displayServices(uses, usesTrees) || displayServices(provides.keySet(), providesTrees));
+                .setSubNavLinks(() -> List.of(
+                        links.createLink(HtmlIds.MODULE_DESCRIPTION, contents.navDescription,
+                            !utils.getFullBody(mdle).isEmpty() && !options.noComment()),
+                        links.createLink(HtmlIds.MODULES, contents.navModules,
+                            display(requires) || display(indirectModules)),
+                        links.createLink(HtmlIds.PACKAGES, contents.navPackages,
+                            display(packages) || display(indirectPackages) || display(indirectOpenPackages)),
+                        links.createLink(HtmlIds.SERVICES, contents.navServices,
+                            displayServices(uses, usesTrees) || displayServices(provides.keySet(), providesTrees))
+                ));
     }
 
-    /**
-     * Get the content header.
-     */
     @Override
     public Content getContentHeader() {
         return new ContentBuilder();
     }
 
-    /**
-     * Get the summary section header.
-     */
     @Override
     public Content getSummariesList() {
-        return new HtmlTree(TagName.UL).setStyle(HtmlStyle.summaryList);
+        return HtmlTree.UL(HtmlStyle.summaryList);
     }
 
-    /**
-     * Get the summary tree.
-     *
-     * @param summaryContentTree the content tree to be added to the summary tree.
-     */
     @Override
-    public Content getSummaryTree(Content summaryContentTree) {
-        return HtmlTree.SECTION(HtmlStyle.summary, summaryContentTree);
+    public Content getSummary(Content source) {
+        return HtmlTree.SECTION(HtmlStyle.summary, source);
     }
 
     /**
@@ -249,14 +224,14 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         // required modules.
         dependentModules.forEach((module, mod) -> {
             if (shouldDocument(module)) {
-                indirectModules.put(module, new StringContent(mod));
+                indirectModules.put(module, Text.of(mod));
             }
         });
         ElementFilter.requiresIn(mdle.getDirectives()).forEach(directive -> {
             ModuleElement m = directive.getDependency();
             if (shouldDocument(m)) {
                 if (moduleMode == ModuleMode.ALL || directive.isTransitive()) {
-                    requires.put(m, new StringContent(utils.getModifiers(directive)));
+                    requires.put(m, Text.of(utils.getModifiers(directive)));
                 } else {
                     // For api mode, just keep the public requires in dependentModules for display of
                     // indirect packages in the "Packages" section.
@@ -267,11 +242,11 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         });
 
         // Get all packages if module is open or if displaying concealed modules
-        for (PackageElement pkg : utils.getModulePackageMap().getOrDefault(mdle, Collections.emptySet())) {
+        for (PackageElement pkg : utils.getModulePackageMap().getOrDefault(mdle, Set.of())) {
             if (shouldDocument(pkg) && (mdle.isOpen() || moduleMode == ModuleMode.ALL)) {
                 PackageEntry e = new PackageEntry();
                 if (mdle.isOpen()) {
-                    e.openedTo = Collections.emptySet();
+                    e.openedTo = Set.of();
                 }
                 packages.put(pkg, e);
             }
@@ -332,7 +307,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
             }
             SortedSet<PackageElement> openPackages = new TreeSet<>(utils.comparators.makePackageComparator());
             if (module.isOpen()) {
-                openPackages.addAll(utils.getModulePackageMap().getOrDefault(module, Collections.emptySet()));
+                openPackages.addAll(utils.getModulePackageMap().getOrDefault(module, Set.of()));
             } else {
                 ElementFilter.opensIn(module.getDirectives()).forEach(directive -> {
                     PackageElement pkg = directive.getPackage();
@@ -371,14 +346,14 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         utils.getProvidesTrees(mdle).forEach(tree -> {
             TypeElement t = ch.getServiceType(tree);
             if (t != null) {
-                providesTrees.put(t, commentTagsToContent(tree, mdle, ch.getDescription(tree), false, true));
+                providesTrees.put(t, commentTagsToContent(mdle, ch.getDescription(tree), false, true));
             }
         });
         // Generate the map of all services listed using @uses, and the description.
         utils.getUsesTrees(mdle).forEach(tree -> {
             TypeElement t = ch.getServiceType(tree);
             if (t != null) {
-                usesTrees.put(t, commentTagsToContent(tree, mdle, ch.getDescription(tree), false, true));
+                usesTrees.put(t, commentTagsToContent(mdle, ch.getDescription(tree), false, true));
             }
         });
     }
@@ -437,12 +412,12 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
      *
      * @param startMarker the marker comment
      * @param heading the heading for the section
-     * @param htmltree the content tree to which the information is added
+     * @param target the content to which the information is added
      */
     public void addSummaryHeader(Content startMarker, Content heading,
-            Content htmltree) {
-        htmltree.add(startMarker);
-        htmltree.add(HtmlTree.HEADING(Headings.ModuleDeclaration.SUMMARY_HEADING, heading));
+            Content target) {
+        target.add(startMarker);
+        target.add(HtmlTree.HEADING(Headings.ModuleDeclaration.SUMMARY_HEADING, heading));
     }
 
     /**
@@ -479,15 +454,12 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
             TableHeader requiresTableHeader =
                     new TableHeader(contents.modifierLabel, contents.moduleLabel,
                             contents.descriptionLabel);
-            HtmlTree section = HtmlTree.SECTION(HtmlStyle.modulesSummary)
-                    .setId(SectionName.MODULES.getName());
+            var section = HtmlTree.SECTION(HtmlStyle.modulesSummary)
+                    .setId(HtmlIds.MODULES);
             addSummaryHeader(MarkerComments.START_OF_MODULES_SUMMARY, contents.navModules, section);
             if (display(requires)) {
                 String text = resources.getText("doclet.Requires_Summary");
-                String tableSummary = resources.getText("doclet.Member_Table_Summary",
-                        text,
-                        resources.getText("doclet.modules"));
-                Content caption = new StringContent(text);
+                Content caption = Text.of(text);
                 Table table = getTable3(caption, requiresTableHeader);
                 addModulesList(requires, table);
                 section.add(table);
@@ -495,10 +467,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
             // Display indirect modules table in both "api" and "all" mode.
             if (display(indirectModules)) {
                 String amrText = resources.getText("doclet.Indirect_Requires_Summary");
-                String amrTableSummary = resources.getText("doclet.Member_Table_Summary",
-                        amrText,
-                        resources.getText("doclet.modules"));
-                Content amrCaption = new StringContent(amrText);
+                Content amrCaption = Text.of(amrText);
                 Table amrTable = getTable3(amrCaption, requiresTableHeader);
                 addModulesList(indirectModules, amrTable);
                 section.add(amrTable);
@@ -516,7 +485,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     private void addModulesList(Map<ModuleElement, Content> mdleMap, Table table) {
         for (ModuleElement m : mdleMap.keySet()) {
             Content modifiers = mdleMap.get(m);
-            Content moduleLink = getModuleLink(m, new StringContent(m.getQualifiedName()));
+            Content moduleLink = getModuleLink(m, Text.of(m.getQualifiedName()));
             Content moduleSummary = new ContentBuilder();
             addSummaryComment(m, moduleSummary);
             table.addRow(modifiers, moduleLink, moduleSummary);
@@ -527,8 +496,8 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     public void addPackagesSummary(Content summariesList) {
         if (display(packages)
                 || display(indirectPackages) || display(indirectOpenPackages)) {
-            HtmlTree section = HtmlTree.SECTION(HtmlStyle.packagesSummary)
-                    .setId(SectionName.PACKAGES.getName());;
+            var section = HtmlTree.SECTION(HtmlStyle.packagesSummary)
+                    .setId(HtmlIds.PACKAGES);
             addSummaryHeader(MarkerComments.START_OF_PACKAGES_SUMMARY, contents.navPackages, section);
             if (display(packages)) {
                 addPackageSummary(section);
@@ -537,13 +506,13 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
                     new TableHeader(contents.fromLabel, contents.packagesLabel);
             if (display(indirectPackages)) {
                 String aepText = resources.getText("doclet.Indirect_Exports_Summary");
-                Table aepTable = getTable2(new StringContent(aepText), indirectPackagesHeader);
+                Table aepTable = getTable2(Text.of(aepText), indirectPackagesHeader);
                 addIndirectPackages(aepTable, indirectPackages);
                 section.add(aepTable);
             }
             if (display(indirectOpenPackages)) {
                 String aopText = resources.getText("doclet.Indirect_Opens_Summary");
-                Table aopTable = getTable2(new StringContent(aopText), indirectPackagesHeader);
+                Table aopTable = getTable2(Text.of(aopText), indirectPackagesHeader);
                 addIndirectPackages(aopTable, indirectOpenPackages);
                 section.add(aopTable);
             }
@@ -558,11 +527,11 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
      */
     public void addPackageSummary(HtmlTree li) {
         Table table = new Table(HtmlStyle.summaryTable)
-                .setId("package-summary-table")
-                .setDefaultTab(resources.getText("doclet.All_Packages"))
-                .addTab(resources.getText("doclet.Exported_Packages_Summary"), this::isExported)
-                .addTab(resources.getText("doclet.Opened_Packages_Summary"), this::isOpened)
-                .addTab(resources.getText("doclet.Concealed_Packages_Summary"), this::isConcealed);
+                .setId(HtmlIds.PACKAGE_SUMMARY_TABLE)
+                .setDefaultTab(contents.getContent("doclet.All_Packages"))
+                .addTab(contents.getContent("doclet.Exported_Packages_Summary"), this::isExported)
+                .addTab(contents.getContent("doclet.Opened_Packages_Summary"), this::isOpened)
+                .addTab(contents.getContent("doclet.Concealed_Packages_Summary"), this::isConcealed);
 
         // Determine whether to show the "Exported To" and "Opened To" columns,
         // based on whether such columns would provide "useful" info.
@@ -616,7 +585,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
             PackageElement pkg = e.getKey();
             PackageEntry entry = e.getValue();
             List<Content> row = new ArrayList<>();
-            Content pkgLinkContent = getPackageLink(pkg, new StringContent(utils.getPackageName(pkg)));
+            Content pkgLinkContent = getPackageLink(pkg, getLocalizedPackageName(pkg));
             row.add(pkgLinkContent);
 
             if (showExportedTo) {
@@ -626,6 +595,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
                 row.add(getPackageExportOpensTo(entry.openedTo));
             }
             Content summary = new ContentBuilder();
+            addPreviewSummary(pkg, summary);
             addSummaryComment(pkg, summary);
             row.add(summary);
 
@@ -633,9 +603,6 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         }
 
         li.add(table);
-        if (table.needsScript()) {
-            mainBodyScript.append(table.getScript());
-        }
     }
 
     private boolean isExported(Element e) {
@@ -655,16 +622,16 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
 
     private Content getPackageExportOpensTo(Set<ModuleElement> modules) {
         if (modules == null) {
-            return new StringContent(resources.getText("doclet.None"));
+            return contents.getContent("doclet.None");
         } else if (modules.isEmpty()) {
-            return new StringContent(resources.getText("doclet.All_Modules"));
+            return contents.getContent("doclet.All_Modules");
         } else {
             Content list = new ContentBuilder();
             for (ModuleElement m : modules) {
                 if (!list.isEmpty()) {
-                    list.add(new StringContent(", "));
+                    list.add(Text.of(", "));
                 }
-                list.add(getModuleLink(m, new StringContent(m.getQualifiedName())));
+                list.add(getModuleLink(m, Text.of(m.getQualifiedName())));
             }
             return list;
         }
@@ -680,12 +647,12 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         for (Map.Entry<ModuleElement, SortedSet<PackageElement>> entry : ip.entrySet()) {
             ModuleElement m = entry.getKey();
             SortedSet<PackageElement> pkgList = entry.getValue();
-            Content moduleLinkContent = getModuleLink(m, new StringContent(m.getQualifiedName()));
+            Content moduleLinkContent = getModuleLink(m, Text.of(m.getQualifiedName()));
             Content list = new ContentBuilder();
             String sep = "";
             for (PackageElement pkg : pkgList) {
                 list.add(sep);
-                list.add(getPackageLink(pkg, new StringContent(utils.getPackageName(pkg))));
+                list.add(getPackageLink(pkg, getLocalizedPackageName(pkg)));
                 sep = " ";
             }
             table.addRow(moduleLinkContent, list);
@@ -699,14 +666,14 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         boolean haveProvides = displayServices(provides.keySet(), providesTrees);
 
         if (haveProvides || haveUses) {
-            HtmlTree section = HtmlTree.SECTION(HtmlStyle.servicesSummary)
-                    .setId(SectionName.SERVICES.getName());
+            var section = HtmlTree.SECTION(HtmlStyle.servicesSummary)
+                    .setId(HtmlIds.SERVICES);
             addSummaryHeader(MarkerComments.START_OF_SERVICES_SUMMARY, contents.navServices, section);
             TableHeader usesProvidesTableHeader =
                     new TableHeader(contents.typeLabel, contents.descriptionLabel);
             if (haveProvides) {
                 String label = resources.getText("doclet.Provides_Summary");
-                Table table = getTable2(new StringContent(label), usesProvidesTableHeader);
+                Table table = getTable2(Text.of(label), usesProvidesTableHeader);
                 addProvidesList(table);
                 if (!table.isEmpty()) {
                     section.add(table);
@@ -714,7 +681,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
             }
             if (haveUses){
                 String label = resources.getText("doclet.Uses_Summary");
-                Table table = getTable2(new StringContent(label), usesProvidesTableHeader);
+                Table table = getTable2(Text.of(label), usesProvidesTableHeader);
                 addUsesList(table);
                 if (!table.isEmpty()) {
                     section.add(table);
@@ -736,7 +703,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
             if (!displayServiceDirective(t, usesTrees)) {
                 continue;
             }
-            typeLinkContent = getLink(new LinkInfoImpl(configuration, LinkInfoImpl.Kind.PACKAGE, t));
+            typeLinkContent = getLink(new HtmlLinkInfo(configuration, HtmlLinkInfo.Kind.PACKAGE, t));
             Content summary = new ContentBuilder();
             if (display(usesTrees)) {
                 description = usesTrees.get(t);
@@ -766,27 +733,29 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
                 continue;
             }
             implSet = entry.getValue();
-            Content srvLinkContent = getLink(new LinkInfoImpl(configuration, LinkInfoImpl.Kind.PACKAGE, srv));
+            Content srvLinkContent = getLink(new HtmlLinkInfo(configuration, HtmlLinkInfo.Kind.PACKAGE, srv));
             Content desc = new ContentBuilder();
             if (display(providesTrees)) {
                 description = providesTrees.get(srv);
-                desc.add((description != null && !description.isEmpty())
-                        ? HtmlTree.DIV(HtmlStyle.block, description)
-                        : Entity.NO_BREAK_SPACE);
+                if (description != null && !description.isEmpty()) {
+                    desc.add(HtmlTree.DIV(HtmlStyle.block, description));
+                } else {
+                    addSummaryComment(srv, desc);
+                }
             } else {
                 desc.add(Entity.NO_BREAK_SPACE);
-                }
+            }
             // Only display the implementation details in the "all" mode.
             if (moduleMode == ModuleMode.ALL && !implSet.isEmpty()) {
                 desc.add(new HtmlTree(TagName.BR));
                 desc.add("(");
-                HtmlTree implSpan = HtmlTree.SPAN(HtmlStyle.implementationLabel, contents.implementation);
+                var implSpan = HtmlTree.SPAN(HtmlStyle.implementationLabel, contents.implementation);
                 desc.add(implSpan);
                 desc.add(Entity.NO_BREAK_SPACE);
                 String sep = "";
                 for (TypeElement impl : implSet) {
                     desc.add(sep);
-                    desc.add(getLink(new LinkInfoImpl(configuration, LinkInfoImpl.Kind.PACKAGE, impl)));
+                    desc.add(getLink(new HtmlLinkInfo(configuration, HtmlLinkInfo.Kind.PACKAGE, impl)));
                     sep = ", ";
                 }
                 desc.add(")");
@@ -798,15 +767,14 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     /**
      * Add the module deprecation information to the documentation tree.
      *
-     * @param div the content tree to which the deprecation information will be added
+     * @param div the content to which the deprecation information will be added
      */
     public void addDeprecationInfo(Content div) {
         List<? extends DeprecatedTree> deprs = utils.getDeprecatedTrees(mdle);
         if (utils.isDeprecated(mdle)) {
             CommentHelper ch = utils.getCommentHelper(mdle);
-            HtmlTree deprDiv = new HtmlTree(TagName.DIV);
-            deprDiv.setStyle(HtmlStyle.deprecationBlock);
-            Content deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(mdle));
+            var deprDiv = HtmlTree.DIV(HtmlStyle.deprecationBlock);
+            var deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(mdle));
             deprDiv.add(deprPhrase);
             if (!deprs.isEmpty()) {
                 List<? extends DocTree> commentTags = ch.getDescription(deprs.get(0));
@@ -819,21 +787,28 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     }
 
     @Override
-    public void addModuleDescription(Content moduleContentTree) {
+    public void addModuleDescription(Content moduleContent) {
+        addPreviewInfo(mdle, moduleContent);
         if (!utils.getFullBody(mdle).isEmpty()) {
-            HtmlTree tree = HtmlTree.SECTION(HtmlStyle.moduleDescription);
-            tree.setId(SectionName.MODULE_DESCRIPTION.getName());
+            var tree = HtmlTree.SECTION(HtmlStyle.moduleDescription)
+                    .setId(HtmlIds.MODULE_DESCRIPTION);
             addDeprecationInfo(tree);
             tree.add(MarkerComments.START_OF_MODULE_DESCRIPTION);
             addInlineComment(mdle, tree);
             addTagsInfo(mdle, tree);
-            moduleContentTree.add(tree);
+            moduleContent.add(tree);
         }
     }
 
     @Override
-    public void addModuleContent(Content moduleContentTree) {
-        bodyContents.addMainContent(moduleContentTree);
+    public void addModuleSignature(Content moduleContent) {
+        moduleContent.add(new HtmlTree(TagName.HR));
+        moduleContent.add(Signatures.getModuleSignature(mdle, this));
+    }
+
+    @Override
+    public void addModuleContent(Content source) {
+        bodyContents.addMainContent(source);
     }
 
     @Override
@@ -842,24 +817,23 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     }
 
     @Override
-    public void printDocument(Content contentTree) throws DocFileIOException {
-        contentTree.add(bodyContents);
+    public void printDocument(Content content) throws DocFileIOException {
+        content.add(bodyContents);
         printHtmlDocument(configuration.metakeywords.getMetaKeywordsForModule(mdle),
-                getDescription("declaration", mdle), getLocalStylesheets(mdle), contentTree);
+                getDescription("declaration", mdle), getLocalStylesheets(mdle), content);
     }
 
     /**
      * Add the module package deprecation information to the documentation tree.
      *
-     * @param li the content tree to which the deprecation information will be added
+     * @param li the content to which the deprecation information will be added
      * @param pkg the PackageDoc that is added
      */
     public void addPackageDeprecationInfo(Content li, PackageElement pkg) {
         if (utils.isDeprecated(pkg)) {
             List<? extends DeprecatedTree> deprs = utils.getDeprecatedTrees(pkg);
-            HtmlTree deprDiv = new HtmlTree(TagName.DIV);
-            deprDiv.setStyle(HtmlStyle.deprecationBlock);
-            Content deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(pkg));
+            var deprDiv = HtmlTree.DIV(HtmlStyle.deprecationBlock);
+            var deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(pkg));
             deprDiv.add(deprPhrase);
             if (!deprs.isEmpty()) {
                 CommentHelper ch = utils.getCommentHelper(pkg);
