@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -57,9 +57,9 @@ import java.util.stream.Stream;
 class StandardBundlerParam<T> extends BundlerParamInfo<T> {
 
     private static final String JAVABASEJMOD = "java.base.jmod";
-    private final static String DEFAULT_VERSION = "1.0";
-    private final static String DEFAULT_RELEASE = "1";
-    private final static String[] DEFAULT_JLINK_OPTIONS = {
+    private static final String DEFAULT_VERSION = "1.0";
+    private static final String DEFAULT_RELEASE = "1";
+    private static final String[] DEFAULT_JLINK_OPTIONS = {
             "--strip-native-commands",
             "--strip-debug",
             "--no-man-pages",
@@ -114,6 +114,9 @@ class StandardBundlerParam<T> extends BundlerParamInfo<T> {
                     params -> {
                         if (isRuntimeInstaller(params)) {
                             return null;
+                        } else if (hasPredefinedAppImage(params)) {
+                            return AppImageFile.extractMainClass(
+                                    getPredefinedAppImage(params));
                         }
                         return LAUNCHER_DATA.fetchFrom(params).qualifiedClassName();
                     },
@@ -128,25 +131,59 @@ class StandardBundlerParam<T> extends BundlerParamInfo<T> {
                     (s, p) -> Path.of(s)
             );
 
-    static final StandardBundlerParam<String> APP_NAME =
+    static final StandardBundlerParam<Path> PREDEFINED_APP_IMAGE =
+            new StandardBundlerParam<>(
+            Arguments.CLIOptions.PREDEFINED_APP_IMAGE.getId(),
+            Path.class,
+            params -> null,
+            (s, p) -> Path.of(s));
+
+    // this is the raw --app-name arg - used in APP_NAME and INSTALLER_NAME
+    static final StandardBundlerParam<String> NAME =
             new StandardBundlerParam<>(
                     Arguments.CLIOptions.NAME.getId(),
                     String.class,
+                    params -> null,
+                    (s, p) -> s
+            );
+
+    // this is the application name, either from the app-image (if given),
+    // the name (if given) derived from the main-class, or the runtime image
+    static final StandardBundlerParam<String> APP_NAME =
+            new StandardBundlerParam<>(
+                    "application-name",
+                    String.class,
                     params -> {
-                        String s = MAIN_CLASS.fetchFrom(params);
-                        if (s != null) {
-                            int idx = s.lastIndexOf(".");
-                            if (idx >= 0) {
-                                return s.substring(idx+1);
-                            }
-                            return s;
-                        } else if (isRuntimeInstaller(params)) {
-                            Path f = PREDEFINED_RUNTIME_IMAGE.fetchFrom(params);
-                            if (f != null) {
-                                return f.getFileName().toString();
+                        Path appImage = PREDEFINED_APP_IMAGE.fetchFrom(params);
+                        String appName = NAME.fetchFrom(params);
+                        if (appImage != null) {
+                            String name = AppImageFile.extractAppName(appImage);
+                            appName  = (name != null) ? name : appName;
+                        } else if (appName == null) {
+                            String s = MAIN_CLASS.fetchFrom(params);
+                            if (s != null) {
+                                int idx = s.lastIndexOf(".");
+                                appName = (idx < 0) ? s : s.substring(idx+1);
+                            } else if (isRuntimeInstaller(params)) {
+                                Path f = PREDEFINED_RUNTIME_IMAGE.fetchFrom(params);
+                                if (f != null) {
+                                    appName = f.getFileName().toString();
+                                }
                             }
                         }
-                        return null;
+                        return appName;
+                    },
+                    (s, p) -> s
+            );
+
+    static final StandardBundlerParam<String> INSTALLER_NAME =
+            new StandardBundlerParam<>(
+                    "installer-name",
+                    String.class,
+                    params -> {
+                        String installerName = NAME.fetchFrom(params);
+                        return (installerName != null) ? installerName :
+                                APP_NAME.fetchFrom(params);
                     },
                     (s, p) -> s
             );
@@ -157,6 +194,14 @@ class StandardBundlerParam<T> extends BundlerParamInfo<T> {
                     Path.class,
                     params -> null,
                     (s, p) -> Path.of(s)
+            );
+
+    static final StandardBundlerParam<String> ABOUT_URL =
+            new StandardBundlerParam<>(
+                    Arguments.CLIOptions.ABOUT_URL.getId(),
+                    String.class,
+                    params -> null,
+                    (s, p) -> s
             );
 
     static final StandardBundlerParam<String> VENDOR =
@@ -269,6 +314,24 @@ class StandardBundlerParam<T> extends BundlerParamInfo<T> {
                             true : Boolean.valueOf(s)
             );
 
+    static final StandardBundlerParam<Boolean> SHORTCUT_HINT  =
+            new StandardBundlerParam<>(
+                    "shortcut-hint", // not directly related to a CLI option
+                    Boolean.class,
+                    params -> true,  // defaults to true
+                    (s, p) -> (s == null || "null".equalsIgnoreCase(s)) ?
+                            true : Boolean.valueOf(s)
+            );
+
+    static final StandardBundlerParam<Boolean> MENU_HINT  =
+            new StandardBundlerParam<>(
+                    "menu-hint", // not directly related to a CLI option
+                    Boolean.class,
+                    params -> true,  // defaults to true
+                    (s, p) -> (s == null || "null".equalsIgnoreCase(s)) ?
+                            true : Boolean.valueOf(s)
+            );
+
     static final StandardBundlerParam<Path> RESOURCE_DIR =
             new StandardBundlerParam<>(
                     Arguments.CLIOptions.RESOURCE_DIR.getId(),
@@ -285,12 +348,16 @@ class StandardBundlerParam<T> extends BundlerParamInfo<T> {
                     (s, p) -> s
     );
 
-    static final StandardBundlerParam<Path> PREDEFINED_APP_IMAGE =
+    static final StandardBundlerParam<Boolean> LAUNCHER_AS_SERVICE =
             new StandardBundlerParam<>(
-            Arguments.CLIOptions.PREDEFINED_APP_IMAGE.getId(),
-            Path.class,
-            params -> null,
-            (s, p) -> Path.of(s));
+                    Arguments.CLIOptions.LAUNCHER_AS_SERVICE.getId(),
+                    Boolean.class,
+                    params -> false,
+                    // valueOf(null) is false, and we actually do want null
+                    (s, p) -> (s == null || "null".equalsIgnoreCase(s)) ?
+                            true : Boolean.valueOf(s)
+            );
+
 
     @SuppressWarnings("unchecked")
     static final StandardBundlerParam<List<Map<String, ? super Object>>> ADD_LAUNCHERS =
@@ -351,6 +418,24 @@ class StandardBundlerParam<T> extends BundlerParamInfo<T> {
             );
 
     @SuppressWarnings("unchecked")
+    static final BundlerParamInfo<List<String>> DMG_CONTENT =
+            new StandardBundlerParam<>(
+                    Arguments.CLIOptions.DMG_CONTENT.getId(),
+                    (Class<List<String>>) (Object)List.class,
+                    p -> Collections.emptyList(),
+                    (s, p) -> Arrays.asList(s.split(","))
+            );
+
+    @SuppressWarnings("unchecked")
+    static final StandardBundlerParam<List<String>> APP_CONTENT =
+            new StandardBundlerParam<>(
+                    Arguments.CLIOptions.APP_CONTENT.getId(),
+                    (Class<List<String>>) (Object)List.class,
+                    p->Collections.emptyList(),
+                    (s, p) -> Arrays.asList(s.split(","))
+            );
+
+    @SuppressWarnings("unchecked")
     static final BundlerParamInfo<List<Path>> MODULE_PATH =
             new StandardBundlerParam<>(
                     Arguments.CLIOptions.MODULE_PATH.getId(),
@@ -359,7 +444,7 @@ class StandardBundlerParam<T> extends BundlerParamInfo<T> {
                     (s, p) -> {
                         List<Path> modulePath = Stream.of(s.split(File.pathSeparator))
                                 .map(Path::of)
-                                .collect(Collectors.toList());
+                                .toList();
                         Path javaBasePath = findPathOfModule(modulePath, JAVABASEJMOD);
 
                         // Add the default JDK module path to the module path.
@@ -367,7 +452,8 @@ class StandardBundlerParam<T> extends BundlerParamInfo<T> {
                             List<Path> jdkModulePath = getDefaultModulePath();
 
                             if (jdkModulePath != null) {
-                                modulePath.addAll(jdkModulePath);
+                                modulePath = Stream.concat(modulePath.stream(),
+                                        jdkModulePath.stream()).toList();
                                 javaBasePath = findPathOfModule(modulePath, JAVABASEJMOD);
                             }
                         }
@@ -430,6 +516,31 @@ class StandardBundlerParam<T> extends BundlerParamInfo<T> {
                     (s, p) -> new LinkedHashSet<>(Arrays.asList(s.split(",")))
             );
 
+    static final StandardBundlerParam<Boolean> SIGN_BUNDLE =
+            new StandardBundlerParam<>(
+                    Arguments.CLIOptions.MAC_SIGN.getId(),
+                    Boolean.class,
+                    params -> false,
+                    (s, p) -> (s == null || "null".equalsIgnoreCase(s)) ?
+                    null : Boolean.valueOf(s)
+        );
+
+    static final StandardBundlerParam<Boolean> APP_STORE =
+            new StandardBundlerParam<>(
+            Arguments.CLIOptions.MAC_APP_STORE.getId(),
+            Boolean.class,
+            params -> {
+                if (hasPredefinedAppImage(params)) {
+                    return AppImageFile.load(getPredefinedAppImage(params))
+                            .isAppStore();
+                }
+                return false;
+            },
+            // valueOf(null) is false, we actually do want null in some cases
+            (s, p) -> (s == null || "null".equalsIgnoreCase(s)) ?
+                    null : Boolean.valueOf(s)
+        );
+
     static boolean isRuntimeInstaller(Map<String, ? super Object> params) {
         if (params.containsKey(MODULE.getID()) ||
                 params.containsKey(MAIN_JAR.getID()) ||
@@ -439,6 +550,10 @@ class StandardBundlerParam<T> extends BundlerParamInfo<T> {
         // runtime installer requires --runtime-image, if this is false
         // here then we should have thrown error validating args.
         return params.containsKey(PREDEFINED_RUNTIME_IMAGE.getID());
+    }
+
+    static boolean hasPredefinedAppImage(Map<String, ? super Object> params) {
+        return params.containsKey(PREDEFINED_APP_IMAGE.getID());
     }
 
     static Path getPredefinedAppImage(Map<String, ? super Object> params) {
