@@ -45,7 +45,7 @@ import org.testng.annotations.Test;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true javax.xml.transform.ptests.TransformerExcpTest
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow javax.xml.transform.ptests.TransformerExcpTest
  * @run testng/othervm javax.xml.transform.ptests.TransformerExcpTest
  */
 @Listeners({jaxp.library.FilePolicy.class})
