@@ -50,7 +50,7 @@ import org.testng.annotations.Test;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true javax.xml.transform.ptests.TransformerTest02
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow javax.xml.transform.ptests.TransformerTest02
  * @run testng/othervm javax.xml.transform.ptests.TransformerTest02
  */
 @Listeners({jaxp.library.FilePolicy.class})
