@@ -42,7 +42,7 @@ import org.testng.annotations.Test;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true org.xml.sax.ptests.SAXParserNSTableTest
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow org.xml.sax.ptests.SAXParserNSTableTest
  * @run testng/othervm org.xml.sax.ptests.SAXParserNSTableTest
  */
 @Listeners({jaxp.library.FilePolicy.class})
