@@ -37,7 +37,7 @@ import org.xml.sax.helpers.DefaultHandler;
 /*
  * @test
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true parsers.ParseEmptyStream
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow parsers.ParseEmptyStream
  * @run testng/othervm parsers.ParseEmptyStream
  * @summary Test SAXParser doesn't accept empty stream.
  */
