@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,8 +25,8 @@
  * @test
  * @bug 8235369
  * @summary Security manager checks for record related core reflection
- * @compile --enable-preview -source ${jdk.version} RecordPermissionsTest.java
- * @run testng/othervm/java.security.policy=allPermissions.policy --enable-preview RecordPermissionsTest
+ * @compile RecordPermissionsTest.java
+ * @run testng/othervm/java.security.policy=allPermissions.policy RecordPermissionsTest
  */
 
 import java.net.URL;
