@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,7 +27,9 @@ import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.FormatStyle;
+import java.time.temporal.WeekFields;
 import java.util.*;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.logging.Level;
 import java.util.logging.LogRecord;
 import java.util.logging.StreamHandler;
@@ -110,6 +112,10 @@ public class LocaleProviders {
                 bug8248695Test();
                 break;
 
+            case "bug8257964Test":
+                bug8257964Test();
+                break;
+
             default:
                 throw new RuntimeException("Test method '"+methodName+"' not found.");
         }
@@ -121,7 +127,7 @@ public class LocaleProviders {
     }
 
     static void adapterTest(String expected, String lang, String ctry) {
-        Locale testLocale = new Locale(lang, ctry);
+        Locale testLocale = Locale.of(lang, ctry);
         LocaleProviderAdapter ldaExpected =
             LocaleProviderAdapter.forType(LocaleProviderAdapter.Type.valueOf(expected));
         if (!ldaExpected.getDateFormatProvider().isSupportedLocale(testLocale)) {
@@ -242,7 +248,7 @@ public class LocaleProviders {
     static void bug8013086Test(String lang, String ctry) {
         try {
             // Throws a NullPointerException if the test fails.
-            System.out.println(new SimpleDateFormat("z", new Locale(lang, ctry)).parse("UTC"));
+            System.out.println(new SimpleDateFormat("z", Locale.of(lang, ctry)).parse("UTC"));
         } catch (ParseException pe) {
             // ParseException is fine in this test, as it's not "UTC"
         }
@@ -252,7 +258,7 @@ public class LocaleProviders {
         if (IS_WINDOWS) {
             Date sampleDate = new Date(0x10000000000L);
             String expected = "\u5e73\u6210 16.11.03 (\u6c34) \u5348\u524d 11:53:47";
-            Locale l = new Locale("ja", "JP", "JP");
+            Locale l = Locale.of("ja", "JP", "JP");
             SimpleDateFormat sdf = new SimpleDateFormat("GGGG yyyy.MMM.dd '('E')' a hh:mm:ss", l);
             sdf.setTimeZone(TimeZone.getTimeZone("America/Los_Angeles"));
             String result = sdf.format(sampleDate);
@@ -289,7 +295,7 @@ public class LocaleProviders {
 
     static void bug8220227Test() {
         if (IS_WINDOWS) {
-            Locale l = new Locale("xx","XX");
+            Locale l = Locale.of("xx","XX");
             String country = l.getDisplayCountry();
             if (country.endsWith("(XX)")) {
                 throw new RuntimeException(
@@ -393,22 +399,29 @@ public class LocaleProviders {
     }
 
     static void bug8245241Test(String expected) {
-        LogRecord[] lra = new LogRecord[1];
-        StreamHandler handler = new StreamHandler() {
+        // this will ensure LocaleProviderAdapter initialization
+        DateFormat.getDateInstance();
+        LogConfig.handler.flush();
+
+        if (LogConfig.logRecordList.stream()
+                .noneMatch(r -> r.getLevel() == Level.INFO &&
+                                r.getMessage().equals(expected))) {
+            throw new RuntimeException("Expected log was not emitted.");
+        }
+    }
+
+    // Set the root logger on loading the logging class
+    public static class LogConfig {
+        final static CopyOnWriteArrayList<LogRecord> logRecordList = new CopyOnWriteArrayList<>();
+        final static StreamHandler handler = new StreamHandler() {
             @Override
             public void publish(LogRecord record) {
-                lra[0] = record;
+                logRecordList.add(record);
+                System.out.println("LogRecord: " + record.getMessage());
             }
         };
-        getLogManager().getLogger("").addHandler(handler);
-
-        DateFormat.getDateInstance(); // this will init LocaleProviderAdapter
-        handler.flush();
-
-        if (lra[0] == null ||
-            lra[0].getLevel() != Level.INFO ||
-            !lra[0].getMessage().equals(expected)) {
-            throw new RuntimeException("Expected log was not emitted. LogRecord: " + lra[0]);
+        static {
+            getLogManager().getLogger("").addHandler(handler);
         }
     }
 
@@ -431,6 +444,36 @@ public class LocaleProviders {
             // Checks there's no "Too many pattern letters: aa" exception thrown, if
             // underlying OS provides the "am/pm" pattern.
             System.out.println(dtf.format(zdt));
+        }
+    }
+
+    // Run only if the platform locale is en-GB
+    static void bug8257964Test() {
+        var defLoc = Locale.getDefault(Locale.Category.FORMAT);
+        var type = LocaleProviderAdapter.getAdapter(CalendarNameProvider.class, Locale.UK)
+                .getAdapterType();
+        if (defLoc.equals(Locale.UK) &&
+                type == LocaleProviderAdapter.Type.HOST &&
+                (IS_WINDOWS || IS_MAC)) {
+            Calendar instance = Calendar.getInstance(Locale.UK);
+            int result = instance.getMinimalDaysInFirstWeek();
+            if (result != 4) {
+                throw new RuntimeException("MinimalDaysInFirstWeek for Locale.UK is incorrect. " +
+                        "returned: " + result);
+            }
+
+            LocalDate date = LocalDate.of(2020,12,31);
+            result = date.get(WeekFields.of(Locale.UK).weekOfWeekBasedYear());
+            if (result != 53) {
+                throw new RuntimeException("weekNumber is incorrect. " +
+                        "returned: " + result);
+            }
+            System.out.println("bug8257964Test succeeded.");
+        } else {
+            System.out.println("Test ignored. Either :-\n" +
+                    "Default format locale is not Locale.UK: " + defLoc + ", or\n" +
+                    "OS is neither macOS/Windows, or\n" +
+                    "provider is not HOST: " + type);
         }
     }
 }
